--- a/style.css
+++ b/style.css
@@ -138,8 +138,8 @@
 /* slider */
 
 .carousel-item img {
-    height: 400px;
-    width: 700px;
+    height: 100%;
+    width: 100%;
 }
 
 .slider{
@@ -150,6 +150,32 @@
 .slidercaption{
     position: relative;
     margin-top: 100px;
+
+}
+
+.card:hover {
+    -webkit-box-shadow: -1px 9px 40px -12px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px 9px 40px -12px rgba(0,0,0,0.75);
+    box-shadow: -1px 9px 40px -12px rgba(0,0,0,0.75);
+}
+
+.list-paket{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding-bottom: 100px;
+    padding-top:50px;
+}
+
+/* container register */
+#middle {
+
+    width: 600px;
+    margin: auto;
+    
+}
+
+.bg-light{
+    margin-bottom: 40px;
 }
 
 
